--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,26 +1,31 @@
 body{
-    /* margin: 0;
-    padding: 0;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #444;
-    background: black; */
     text-align: center;
 }
 
-.header{
-    background-color: #282c34;
+.nav{
+    font-size: medium;
+    font-weight: bold;
+}
+
+.nav-b{
+    margin-top: 1vh;
+}
+
+ .header{
     color: white;
-    min-height: 20vh;
+    margin: 4vh;
+    margin-left: 3vh;
 }
 
 .header-container{
-    min-height: 20vh;
+    min-height: 10vh;
     padding: 20px;
 }
 
 .app-header{
-    background-color: #282c34;
     min-height: 100vh;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,17 +48,6 @@ body{
     color: black;
 }
 
-/* .movie-card{
-    width: 300px;
-    height: auto;
-    background: white;
-    padding: 12px;
-    border-radius: 2px;
-    box-shadow: 2px 2px 4px #867475;
-    margin: 12px;
-    align-self: center;
-} */
-
 .movie-search{
     height: 48px;
     font-size: 24px;
@@ -64,22 +58,14 @@ body{
 }
 
 .movie-title{
-    height: 68px;
-    margin-top: 26px;
     font-weight: bold;
-}
-
-.movie-date{
-    margin-top: 26px;
-    font-style: italic;
+    padding-left: 5px;
 }
 
 .movie-rate{
-    color: red;
     margin-bottom: 24px;
-    font-weight: bold;
     font-size: 1,2em;
-    text-decoration: underline;
+    padding-left: 5px;
 }
 
 .movie-card{
@@ -87,6 +73,37 @@ body{
     height: auto;
 }
 
+.rst{
+    margin-left: 5vh;
+    width: 100px;
+    background-color: black;
+    color: white;
+    font-size: 24px;
+}
+
+.rsec{
+    margin: 5px;
+    padding-left: 5px;
+    width: 5px;
+    background-color: red;
+}
+
+.tvrst{
+    margin-left: 5vh;
+    width: 100px;
+    background-color: black;
+    color: white;
+    font-size: 24px;
+}
+
+.tvrsec{
+    margin: 5px;
+    padding-left: 5px;
+    width: 5px;
+    background-color: red;
+}
+
 img {
     max-width: 100%;
+    max-height: 100%;
 }
