--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MovieCinema</title>
     <link rel="stylesheet"href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet"href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='icon/icon.png') }}" type="image/icon type">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black  border-bottom border border-secondary rounded">
+        <div class="container">
+            <a class="navbar-brand nav" href="/index">MovieApp</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                <li class="nav-item nav-b">
+                    <a class="nav-link {% if request.endpoint=='index' %}active{%endif %}" aria-current="page" href="/index">Movies</a>
+                </li>
+                <li class="nav-item nav-b">
+                    <a class="nav-link {% if request.endpoint=='tv_show' %}active{%endif %}" href="/tv_show">TV Shows</a>
+                </li>
+                </ul>
+            </div>
+            <form class="form-inline" action="/result" method="post">
+                <input class="form-control mr-sm-2" type="text" name="search_name" id="search_name" placeholder="Search" aria-label="Search">
+                <button class="btn btn-secondary" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
     {% block content %}
 
     {% endblock content %}
