--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
 <header class="header">
-    <h1>Popular Movie</h1>
-    <form action="/movie_result" method="post">
-        <input type="text" name="movie_name" id="movie_name" placeholder="search...">
-        <input type="submit" value="Submit">
-    </form>
+    <div>
+        <h1>Popular Movie</h1>
+    </div>
 </header>
 <div class="app-header">
     <div class="movie-list-container">
         {% for movie in data %}
         <div class="movie-wrapper">
-            <div class="movie-title">{{movie.title}}</div>
             <div class="movie-card">
                 <img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" class="movie-poster">
             </div>
-            <div class="movie-date">{{movie.release_date}}</div>
-            <div class="movie-rate">{{movie.vote_average}}</div>
+            <div class="movie-title">
+                {{movie.title}}
+            </div>
+            <div class="movie-rate">
+                <img src="{{ url_for('static', filename='icon/star.png') }}" alt="" width="20px"> {{movie.vote_average}} | {{movie.release_date}}
+            </div>
         </div>
         {% endfor %}
     </div>    
