--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <title>MovieCinema</title>
     <link rel="stylesheet"href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet"href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="icon" href="{{ url_for('static', filename='icon/icon.png') }}" type="image/icon type">
 </head>
 <body>
@@ -36,5 +38,7 @@
 
     {% endblock content %}
 </body>
-
+<footer class="page-footer font-small red">
+    <div class="footer-copyright text-center py-3 text-white">&copy 2022 | All Right Reserved</div>  
+  </footer>
 </html>
