--- a/templates/result.html
+++ b/templates/result.html
@@ -6,6 +6,7 @@
         <h2> Result for "{{search_name}}" </h2>
     </div>
 </header>
+
 <div class="border border-dark rounded rst">
     <p class="rsec">Movies</p>
 </div>
@@ -16,9 +17,12 @@
             <div class="movie-card">
                 <img src="https://image.tmdb.org/t/p/w500/{{movies.poster_path}}" class="movie-poster">
             </div>
-            <div class="movie-title">{{movies.title}}</div>
+            <div class="movie-title">
+                <a class="a" href="{{ url_for('detail_m', title=movies.id) }}">{{movies.title}}</a>
+            </div>
             <div class="movie-rate">
-                <img src="{{ url_for('static', filename='icon/star.png') }}" alt="" width="20px"> {{movies.vote_average}} | {{movies.release_date}}
+                <span class="fa fa-star checkhed"></span>
+                {{movies.vote_average}} | {{movies.release_date}}
             </div>
         </div>
         {% endfor %}
@@ -35,14 +39,16 @@
             <div class="movie-card">
                 <img src="https://image.tmdb.org/t/p/w500/{{tv.poster_path}}" class="movie-poster">
             </div>
-            <div class="movie-title">{{tv.name}}</div>
+            <div class="movie-title">
+                <a class="a" href="{{ url_for('detail_t', name=tv.id) }}">{{tv.name}}</a>
+            </div>
             <div class="movie-rate">
-                <img src="{{ url_for('static', filename='icon/star.png') }}" alt="" width="20px"> {{tv.vote_average}} | {{tv.first_air_date}}
+                <span class="fa fa-star checkhed"></span>
+                {{tv.vote_average}} | {{tv.first_air_date}}
             </div>
         </div>
         {% endfor %}
     </div>
 </div>
-
 
 {% endblock content %}
