--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,3 +107,101 @@ img {
     max-width: 100%;
     max-height: 100%;
 }
+
+.a{
+    color: black;
+}
+
+.a:hover{
+    color: red;
+    text-decoration: none;
+}
+
+.detail-list-container{
+    width: 100%;
+    display: flex;
+    flex-direction: wrap;
+    flex-wrap: wrap;
+    gap: 28px;
+}
+
+.detail-card{
+    margin-left: 5vh;
+    width: 300px;
+    height: auto;
+}
+
+.detail-wrapper{
+    width: fit-content;
+}
+
+.detail-title{
+    font-weight: bold;
+    width: fit-content;
+    margin-left: 20px;
+}
+
+.detail-tagline{
+    margin-left: 3.2vh;
+    font-size: smaller;
+}
+
+.dtitle{
+    width: 70%;
+}
+
+.detail-date{
+    margin-top: 5px;
+    margin-left: 3.2vh;
+    font-size: small;
+}
+
+.inl{
+    width: fit-content;
+    background-color: gray;
+    padding: 5px;
+    margin-left: 3.2vh;
+    border-radius: 5px;
+    float: left;
+}
+
+.detail-vote{
+    margin-top: 3.4vh;
+    margin-left: 20vh;
+}
+
+.checkhed{
+    color: orange;
+}
+
+.detail-overview{
+    margin-left: 3.2vh;
+}
+
+.credit-list-container{
+    margin: 5vh;
+    display: flex;
+    flex-direction: wrap;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.c-card{
+    width: 100px;
+    height: fit-content;
+    margin-bottom: 3vh;
+}
+
+.credit-cast{
+    margin-left: 3.2vh;
+    margin-top: 3.2vh;
+    width: 300px;
+}
+
+.cast-p{
+    width: 100%;
+}
+
+.img{
+    max-height: 20%;
+}
